--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "mongoose": "^9.0.1",
     "socket.io": "^4.7.1"
   },
